--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
 
   font-family: "Open Sans", "Helvetica Neue", sans-serif;
-  background-image : url("http://p1.pichost.me/640/25/1483573.jpg");
+  background-image : url("https://p1.pichost.me/640/25/1483573.jpg");
   font-size: 1em;
   background-color: #9C8F78;
 }
